# ManifoldPlus

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  old_CMakeLists.txt  requirements.txt
manifold/: __init__.py
src/: Manifold.cc  Manifold.h  bindings.cc  main.cc  test.cc  types.h
